--- a/.env
+++ b/.env
@@ -39,6 +39,15 @@ CI_ENVIRONMENT = development
 # DATABASE
 #--------------------------------------------------------------------
 
+database.default.hostname = localhost
+# database.default.hostname = 127.0.01
+database.default.database = proyek_rpl     
+database.default.username = root
+database.default.password = 
+database.default.DBDriver = MySQLi
+database.default.DBPrefix =
+# database.default.port = 3306
+
 # database.default.hostname = localhost
 # database.default.database = ci4
 # database.default.username = root
