--- a/.env
+++ b/.env
@@ -129,11 +129,11 @@ database.default.DBPrefix =
 
 # security.csrfProtection = 'cookie'
 # security.tokenRandomize = false
-# security.tokenName = 'csrf_token_name'
-# security.headerName = 'X-CSRF-TOKEN'
-# security.cookieName = 'csrf_cookie_name'
-# security.expires = 7200
-# security.regenerate = true
+security.tokenName = 'csrf_token_name'
+security.headerName = 'X-CSRF-TOKEN'
+security.cookieName = 'csrf_cookie_name'
+security.expires = 7200
+security.regenerate = true
 # security.redirect = true
 # security.samesite = 'Lax'
 
